# fp-tests

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile  registry.toml
.github/workflows/: ci.yaml
src/: cli.rs  fixture.rs  generator.rs  main.rs  runner.rs  util.rs
src/pipeline/: mod.rs  runnable.rs
src/registry/: build.rs  mod.rs  platform.rs  program.rs
src/registry/platform/: cannon.rs  native.rs
src/registry/program/: op_program.rs
tests/basic-faulty-claim/: fixture.toml  genesis.json.zst
tests/basic-success/: fixture.toml  rollup.json  witness-db.tar.zst
tests/basic-transfers-success/: fixture.toml  genesis.json.zst  rollup.json
