[package]
name = "fpt"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["clabby"]
repository = "https://github.com/ethereum-optimism/fp-tests"
homepage = "https://github.com/ethereum-optimism/fp-tests"
publish = false

[dependencies]
# Core
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"
tempfile = "3.12"

# Alloy
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-genesis = "0.3"
alloy-provider = "0.3"
alloy-transport-http = "0.3"
alloy-rpc-client = "0.3"
alloy-rpc-types = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
cli-table = "0.4"

[[bin]]
name = "fpt"
path = "src/main.rs"
